# robs_awesome_python_template_examples

./: README.md  makefile
.github/workflows/: build_and_push.yaml
bare/: .env.example  .gitattributes  .gitignore  .prettierignore  LICENSE  README.md  makefile  pyproject.toml  setup.cfg
bare/bare/: _version.py
bare/bare/conf/: settings.py
bare/docs/dev/: README.md  documentation.md  makefile.md  pypi.md  settings.md  testing.md
bare/tests/: test_settings.py
confs/: bare.yaml  full.yaml  library.yaml
full/: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  LICENSE  README.md  compose.yaml  dockerfile.celery  dockerfile.qq  dockerfile.www  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
full/.agents/skills/aiocache/: SKILL.md
full/.agents/skills/celery-tasks/: SKILL.md
full/.agents/skills/docker-compose/: SKILL.md
full/.agents/skills/fastapi-routes/: SKILL.md
full/.agents/skills/jinja-templates/: SKILL.md
full/.agents/skills/jinja-templates/references/: sandboxed-templates.md
full/.agents/skills/makefile/: SKILL.md
full/.agents/skills/pydantic-settings/: SKILL.md
full/.agents/skills/python-testing/: SKILL.md
full/.agents/skills/sqlalchemy-models/: SKILL.md
full/.agents/skills/typer-cli/: SKILL.md
full/.github/workflows/: alembic.yaml  docker.yaml  pypi.yaml  pytest.yaml
full/db/: env.py
full/docker/www/: prestart.sh
full/docs/dev/: README.md  api.md  cache.md  celery.md  cli.md  database.md  dependencies.md  docker.md  documentation.md  github.md  makefile.md  pypi.md  quasiqueue.md  settings.md  templates.md  testing.md
full/full/: __init__.py  _version.py  celery.py  cli.py  qq.py  www.py
full/full/conf/: settings.py
full/full/services/: cache.py  db.py  jinja.py
full/tests/: conftest.py  test_celery.py  test_cli.py  test_qq.py  test_settings.py  test_www.py
full/tests/services/: test_cache.py  test_jinja.py
