[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
description = "A very simple python library to demonstrate the Awesome Template."
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "bare"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "pydantic~=2.0",
  "pydantic-settings"
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "mypy",
  "pip-tools",
  "pytest",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort"
]

[tool.ruff]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
bare = ["py.typed"]

[tool.setuptools.packages]
find = {}

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "bare/_version.py"
