[metadata]
name = bare
description = A python library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = bare/_version.py
versionfile_build = bare/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
include_package_data = True
install_requires =
  pydantic

[options.extras_require]
dev =
  black
  build
  dapperdata
  glom
  isort
  mypy
  pip-tools
  pytest
  pytest-cov
  pytest-pretty
  ruamel.yaml

[options.package_data]
bare = py.typed


