[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=67.0", "setuptools_scm[toml]>=7.1"]

[project]
authors = [{"name" = "Robert Hafner"}]
description = "A full application to demonstrate the Awesome Template."
dynamic = ["version"]
license = {"file" = "LICENSE"}
name = "full"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
  "aiosqlite",
  "alembic",
  "asyncpg",
  "celery",
  "fastapi",
  "jinja2",
  "psycopg2-binary",
  "pydantic~=2.0",
  "pydantic-settings",
  "QuasiQueue",
  "SQLAlchemy",
  "redis",
  "typer"
]

[project.optional-dependencies]
dev = [
  "build",
  "dapperdata",
  "glom",
  "greenlet",
  "httpx",
  "mypy",
  "paracelsus",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "pytest-pretty",
  "ruamel.yaml",
  "ruff",
  "toml-sort",
  "uv"
]

[project.scripts]
full = "full.cli:app"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
omit = [
  "./full/_version.py",
  "./full/__init__.py",
  "./tests/*"
]

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]
strict_optional = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
exclude = [".venv", "./full/_version.py"]
line-length = 120

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.package-data]
full = ["py.typed"]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*"]

[tool.setuptools_scm]
fallback_version = "0.0.0-dev"
write_to = "full/_version.py"
