[metadata]
name = full
description = A python library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[versioneer]
VCS = git
style = pep440
versionfile_source = full/_version.py
versionfile_build = full/_version.py
tag_prefix = v

parentdir_prefix =

[options]
packages = find:
include_package_data = True
install_requires =
  aiosqlite
  alembic
  asyncpg
  celery
  dogpile.cache
  fastapi
  jinja2
  psycopg2-binary
  pydantic
  SQLAlchemy
  redis

[options.extras_require]
dev =
  black
  build
  dapperdata
  glom
  isort
  mypy
  pip-tools
  pytest
  pytest-cov
  pytest-pretty
  ruamel.yaml

[options.package_data]
full = py.typed


